Reworked on the certification generation
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -40,6 +40,8 @@ spec:
           value: "0"
         - name: ANSIBLE_VERBOSITY_PEER_OPERATOR_FABRIC_HYPERLEDGER_ORG
           value: "0"
+        - name: ANSIBLE_VERBOSITY_NODECERT_OPERATOR_FABRIC_HYPERLEDGER_ORG
+          value: "0"
         securityContext:
           allowPrivilegeEscalation: false
         livenessProbe:
