--- a/roles/nodecert/tasks/one-cert.yml
+++ b/roles/nodecert/tasks/one-cert.yml
@@ -14,7 +14,9 @@
 
 - name: Set party file name prefix
   set_fact:
-    partyid: "{{ 99999999 | random | to_uuid }}"
+    partyid: "{{ party.id }}"
+    partytype: "{{ party.type }}"
+    partycn: "{{ party.cn }}"
 
 - name: Generate a private keys
   community.crypto.openssl_privatekey:
@@ -27,13 +29,13 @@
     path: "{{ certdir }}/{{ partyid }}.csr"
     privatekey_path: "{{ certdir }}/{{ partyid }}-key.pem"
     subject:
-      OU: "{{ party_type | capitalize }}"
+      OU: "{{ partytype | capitalize }}"
       O: "{{ organization }}"
     subject_alt_name: "DNS:{{ nodename }},DNS:{{ istio_hostname }}"
-    common_name: "{{ party_cn }}"
+    common_name: "{{ partycn }}"
     basic_constraints_critical: yes
     basic_constraints: 
-    - "CA:{{ party_type == 'ca' | ternary('TRUE', 'FALSE') }}"
+    - '{{ (partytype == "ca") | ternary("CA:TRUE", "CA:FALSE") }}'
     key_usage:
     - digitalSignature
     - keyEncipherment
@@ -45,16 +47,28 @@
     - serverAuth
     extended_key_usage_critical: yes
 
+# ca node uses selfsigned
 - name: Generate self-signed certificate based on CSRs
-  when: party_type == 'ca'
+  when: partytype == 'ca'
   community.crypto.x509_certificate:
     path: "{{ certdir }}/{{ partyid }}-cert.pem"
     privatekey_path: "{{ certdir }}/{{ partyid }}-key.pem"
     csr_path: "{{ certdir }}/{{ partyid }}.csr"
     provider: selfsigned
 
+# server cert should be signed by tls root key
 - name: Generate signed certificate based on CSRs
-  when: party_type in ('peer', 'orderer', 'user', 'admin')
+  when: partytype in ('peer', 'orderer')
+  community.crypto.x509_certificate:
+    path: "{{ certdir }}/{{ partyid }}-cert.pem"
+    csr_path: "{{ certdir }}/{{ partyid }}.csr"
+    ownca_content: "{{ cadata['tls-cert.pem'] | b64decode }}"
+    ownca_privatekey_content: "{{ cadata['tls-key.pem'] | b64decode }}"
+    provider: ownca
+
+# user certs should be signed by root key
+- name: Generate signed certificate based on CSRs
+  when: partytype in ('user', 'admin')
   community.crypto.x509_certificate:
     path: "{{ certdir }}/{{ partyid }}-cert.pem"
     csr_path: "{{ certdir }}/{{ partyid }}.csr"
