Added orderer node
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_ca.yaml
+++ b/config/samples/operator_v1alpha1_ca.yaml
@@ -5,8 +5,7 @@ metadata:
 spec:
   # Add fields here
   organization: example.com
-  certs: ca-sample-example-com-certs
-  admin: ca-sample-example-com-admin
+  nodeCert:
   release: 1.5.0
   storage: 5Gi
   logLevel: DEBUG
