--- a/roles/nodecert/tasks/validation.yaml
+++ b/roles/nodecert/tasks/validation.yaml
@@ -8,10 +8,7 @@
     msg: "node type must be provided and be one of CA, Orderer or Peer in the request"
   when: node_type == None or (node_type|trim) == '' or ((node_type|lower) not in ('ca', 'orderer', 'peer'))
 
-- name: Set mspid
+- name: Set mspid and work directory
   set_fact:
     mspid: "{{ ansible_operator_meta.name }}-{{ organization|replace('.', '-') }}"
-
-- name: Get the home directory and setup node name
-  set_fact:
     workdir: "{{ lookup('env','HOME') }}/vars"
