--- a/watches.yaml
+++ b/watches.yaml
@@ -4,6 +4,9 @@
   group: operator.fabric.hyperledger.org
   kind: Orderer
   role: orderer
+  finalizer:
+    name: operator.fabric.hyperledger.org/finalizer
+    playbook: playbooks/destroy.yml
 - version: v1alpha1
   group: operator.fabric.hyperledger.org
   kind: CA
