--- a/roles/nodecert/tasks/do-peer.yml
+++ b/roles/nodecert/tasks/do-peer.yml
@@ -7,18 +7,21 @@
       - 'fabric-organization = {{ organization}}'
   register: casecret
 
-- debug:
-    var: casecret
+- name: Fail the process when CA certs are not available
+  when: casecret.resources|length == 0 or casecret.resources[0].data == None
+  fail:
+    msg: "There is no CA certs found to create peer node certificate, create CA node cert first"
 
-- name: Get the ca cert and keys
+- name: Create the peer node cert secret when CA certs are available
   when: casecret.resources|length > 0 and casecret.resources[0].data != None
   block:
   - name: Setup the ca certs and parties
     set_fact:
       cadata: "{{ casecret.resources[0].data }}"
       parties: >-
-        {{ [ { 'type': 'peer', 'cn': nodename, 'id': (99999999 | random | to_uuid) },
-             { 'type': 'admin', 'cn': 'Admin@'+nodename, 'id': (99999999 | random | to_uuid) },
+        {{ [ { 'type': 'peer', 'cn': nodename, 'tls': False, 'id': (99999999 | random | to_uuid) },
+             { 'type': 'peer', 'cn': 'tls'+nodename, 'tls': True, 'id': (99999999 | random | to_uuid) },
+             { 'type': 'admin', 'cn': 'Admin@'+nodename, 'tls': False, 'id': (99999999 | random | to_uuid) },
         ] }}
 
   - name: Generate cert and key pairs
@@ -26,6 +29,24 @@
     loop: "{{ parties }}"
     loop_control:
       loop_var: party
+
+  - name: Setup config.yaml content
+    set_fact:
+      nodeconfig: |
+        NodeOUs:
+          Enable: true
+          ClientOUIdentifier:
+            Certificate: cacerts/ca.pem
+            OrganizationalUnitIdentifier: client
+          PeerOUIdentifier:
+            Certificate: cacerts/ca.pem
+            OrganizationalUnitIdentifier: peer
+          AdminOUIdentifier:
+            Certificate: cacerts/ca.pem
+            OrganizationalUnitIdentifier: admin
+          OrdererOUIdentifier:
+            Certificate: cacerts/ca.pem
+            OrganizationalUnitIdentifier: orderer
 
   - name: Create nodecert secret
     community.kubernetes.k8s:
@@ -40,9 +61,12 @@
             fabric-organization: '{{ organization }}'
         type: Opaque
         data:
-          tlsca.crt: "{{ cadata['tls-cert.pem'] }}"
+          ca.crt: "{{ cadata['ca-cert.pem'] }}"
           server.key: "{{ lookup('file', certdir+'/'+parties[0].id+'-key.pem', errors='ignore') | b64encode }}"
           server.crt: "{{ lookup('file', certdir+'/'+parties[0].id+'-cert.pem', errors='ignore') | b64encode }}"
-          adminca.crt: "{{ cadata['ca-cert.pem'] }}"
-          admin.key: "{{ lookup('file', certdir+'/'+parties[1].id+'-key.pem', errors='ignore') | b64encode }}"
-          admin.crt: "{{ lookup('file', certdir+'/'+parties[1].id+'-cert.pem', errors='ignore') | b64encode }}"
+          tlsca.crt: "{{ cadata['tls-cert.pem'] }}"
+          tls.key: "{{ lookup('file', certdir+'/'+parties[1].id+'-key.pem', errors='ignore') | b64encode }}"
+          tls.crt: "{{ lookup('file', certdir+'/'+parties[1].id+'-cert.pem', errors='ignore') | b64encode }}"
+          admin.key: "{{ lookup('file', certdir+'/'+parties[2].id+'-key.pem', errors='ignore') | b64encode }}"
+          admin.crt: "{{ lookup('file', certdir+'/'+parties[2].id+'-cert.pem', errors='ignore') | b64encode }}"
+          config.yaml: "{{ nodeconfig | b64encode }}"
