--- a/watches.yaml
+++ b/watches.yaml
@@ -18,6 +18,9 @@
   group: operator.fabric.hyperledger.org
   kind: Peer
   role: peer
+  finalizer:
+    name: operator.fabric.hyperledger.org/finalizer
+    playbook: playbooks/destroy.yml
 - version: v1alpha1
   group: operator.fabric.hyperledger.org
   kind: Nodecert
