--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -127,4 +127,21 @@ rules:
       - patch
       - update
       - watch
+  ##
+  ## Rules for operator.fabric.hyperledger.org/v1alpha1, Kind: Agent
+  ##
+  - apiGroups:
+      - operator.fabric.hyperledger.org
+    resources:
+      - agents
+      - agents/status
+      - agents/finalizers
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
 #+kubebuilder:scaffold:rules
